KeePassDX(2.9.5)
 * Unlock database by device credentials (PIN/Password/Pattern) with Android M+ #102 #152 #811
 * Prevent auto switch back to previous keyboard if otp field exists #814

KeePassDX(2.9.4)
 * Fix small bugs #812
 * Argon2ID implementation #791

KeePassDX(2.9.3)
 * Unlock database by device credentials (PIN/Password/Pattern) #779 #102
 * Advanced unlock with timeout #102 #437 #566
 * Remove default database parameter when the file is no longer accessible #803
 * Move OTP button to the first view level in Magikeyboard #587
 * Tooltips for Magikeyboard #586
 * Fix small bugs #805

KeePassDX(2.9.2)
 * Managing OTP links from QR applications #556
 * Prevent manual creation of existing field name #718
 * Harmonization of field names #789
 * Different channels for each type of notification #688
 * Fix OTP #780 #781
 * Fix same save shared info #783
 * Fix switch back to previous keyboard #782
 * Fix read only #792
 * Better UI #719 #534 #617 #793

KeePassDX(2.9.1)
 * Copy password from generator #697
 * Fix Magikeyboard not fully visible #772
 * Fix change font size #770
 * Fix crash #774
 * Small fixes #771

KeePassDX(2.9)
 * Upgrade to Android API 30 #723
 * Save new credentials with Autofill #524
 * Setting to close database after Autofill selection #755
 * Setting to switch keyboard when database is locked #625
 * Fix biometric issues #724 #740 #731
 * Fix autofill #725 #551
 * Fix subdomain search #728
 * Fix backup search #759
 * Small fixes and translations #732 #736 #737 #738 #742 #767

KeePassDX(2.8.7)
 * Downgrade to Android API 29 (crash on startup with API 30 on some devices)
 Sorry for the inconvenience

KeePassDX(2.8.6)
 * Fix Autofill recognition #712
 * Keep value after renaming custom field #709
 * Prevent random binary bug #713
 * Fix dialog background #717
 * Better domain recognition for autofill #702
 * Write custom data #651
 * Fix autolink #720

KeePassDX(2.8.5)
 * Fix Base 64 #708

KeePassDX(2.8.4)